@@ -1,7 +1,21 @@
-FROM openjdk:11
-COPY . .
-RUN ./gradlew build
-ARG JAR_FILE=build/libs/*.jar
-COPY ${JAR_FILE} app.jar
+#FROM openjdk:11
+#COPY . .
+#RUN ./gradlew build
+#ARG JAR_FILE=target/*.jar
+#COPY ${JAR_FILE} app.jar
+#EXPOSE 8080
+#ENTRYPOINT ["java","-jar","/app.jar"]
+FROM gradle:7.2-jdk8-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
+
+FROM openjdk:8-jre-slim
+
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/app.jar"]
+
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
